samples/_failures_safe/1761514055_d44690_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eff2e8b5.c:115:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  115 | int main
      | ^~~
